[tool.poetry]
name = "student_registration"
version = "0.1.0"
description = ""
authors = ["Vishal Mishra"]
readme = "README.md"
packages = [{include = "student_registration", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.6.4"
requests = "^2.31.0"
black = "^24.4.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
ruff = "^0.3.5"
coverage = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.report]
## Regexes for lines to exclude from consideration
exclude_also = [
    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self\\.debug",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",

    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",
    ]

ignore_errors = false

